[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "usss-mysqlhandler"
version = "0.1.0"
authors = [
  { name="Julian Briggs", email="julian.briggs@sheffield.ac.uk" },
]
description = "MySQL convenience package "
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/pypa/usss-mysqlhandler"
Issues = "https://github.com/pypa/usss-mysqlhandler/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}}
