[project]
authors = [
  { name="Julian Briggs", email="julian.briggs@sheffield.ac.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mysql-connector-python>=9.6.0",
    "pyyaml>=6.0.3",
]
description = "MySQL convenience package "
name = "usss-mysqlhandler"
readme = "README.md"
requires-python = ">=3.14"
version = "0.3.0"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint-pytest>=1.1.8",
    "pytest>=8.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20250915",
]
