# Setup.cfg for mysqlhandler
# Julian Briggs
# 2022-02-18

[metadata]
name = mysqlhandler
#version = attr: mysqlhandler.__version__
#version = file: VERSION
version = 0.1.1
author = Julian Briggs
author_email = julian.briggs@sheffield.ac.uk
description = Simplify using MySQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/mysqlhandler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src
